# py-llm-factory

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-pypi.yml
src/py_llm_factory/: __init__.py  cli.py
tests/: test_1.py  test_llm_factory.py
