
# -----------------------------------------------------------------------------------------------
[project]
name = "py-llm-factory"
dynamic = ["version"]
description = "This is the Python package py-llm-factory."

readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "Tony Lee", email = "iamtonylee@gmail.com" },
]

# Check https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]

dependencies = [
]


# -----------------------------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest",
]


# -----------------------------------------------------------------------------------------------
[project.urls]
Homepage = "https://github.com/hktonylee/py-llm-factory"
Repository = "https://github.com/hktonylee/py-llm-factory"


# -----------------------------------------------------------------------------------------------
[project.scripts]
py-llm-factory = "py_llm_factory.cli:main"


# -----------------------------------------------------------------------------------------------
[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 8"]
build-backend = "setuptools.build_meta"


# -----------------------------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["./src/"]
include = ["py_llm_factory"]


# -----------------------------------------------------------------------------------------------
[tool.setuptools.package-data]
py_llm_factory = ["py.typed"]


# -----------------------------------------------------------------------------------------------
[tool.setuptools_scm]


# -----------------------------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]


# -----------------------------------------------------------------------------------------------
[tool.isort]
profile = "black"


